# StrategyNodes

./: .clang-format  .clangd  .gitignore  CLAUDE.md  README.md  run.py  vcpkg.json
config/: endpoints.json  venues.json
data_feed/: CMakeLists.txt  CMakePresets.json  vcpkg.json
data_feed/include/: aliasing.h  channels_enum.h  config_manager.h  constants.h  contract_macro.h  credentials.h  data_feed.h  https_client_one_shot.h  json_orderbook_parser.h  kraken_credentials.h  kraken_data_feed_l2.h  kraken_websocket_token.h  kraken_websocket_token_generator.h  l2_kraken_data_feed.h  l2_orderbook.h  l2_record.h  l2_update.h  level3_parser_threaded.h  order.h  orderbook_delta.h  orderbook_entry.h  orderbook_l2.h  orderbook_sides.h  signer.h  tls_context.h  utility.h  utility_ssl.h  websocket_broadcast_server.h  websocket_data_feed.h  websocket_subscription.h
data_feed/source/: channels_enum.cc  config_manager.cc  contract_handler.cc  credentials.cc  data_feed.cc  data_types.h  https_client_one_shot.cc  kraken_credentials.cc  kraken_data_feed_l2.cc  kraken_websocket_token_generator.cc  l2_kraken_data_feed.cc  l2_orderbook.cc  level3_parser_threaded.cc  main.cc  orderbook_l2.cc  parser_example  rest_example  signer.cc  tls_context.cc  utility.cc  utility_ssl.cc  websocket_broadcast_server.cc  websocket_example  websocket_subscription.cc
example_responses/orderbook/: level1.txt  level2.txt  level3_small.txt
example_scripts/kraken/: get_websocket_token.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/scripts/: mock_feed.ts  smoke_client.ts
frontend/src/: App.tsx  app.css
frontend/src/components/: GraphCanvas.tsx  TickerPanel.tsx
frontend/src/lib/: market_feed.ts
proto/: market_data.proto
